# browser-mcp

./: .gitignore  Cargo.toml  HTTPS_SETUP.md  QUICKSTART.md  README.md  browser-mcp.toml  cert.pem  config.yaml  cursor-mcp-config.json  generate_cert.sh  key.pem  python-requirements.txt  test_client.html
docs/: 00_技术文档索引.md  01_项目概述和业务逻辑.md  02_技术栈详解.md  03_架构设计和模块实现.md  04_向量化和搜索原理.md  05_MCP协议实现.md  BURN_CODE_EMBEDDING.md  CANDLE_VS_BURN.md  TECHNICAL_DETAILS.md
qdrant/: config.yaml
scripts/: convert_codebert_to_onnx.py  convert_pytorch_to_safetensors.py
src/: app_config.rs  codebase.rs  embedding.rs  http_server.rs  indexer_state.rs  main.rs  main.rs.backup  mcp.rs  parser.rs
src/storage/: qdrant.rs
